--- a/index.html
+++ b/index.html
@@ -17,14 +17,14 @@ body { font-family:"Cormorant Garamond", serif; background:#fffaf9; color:#444; 
   align-items:center;
   justify-content:center;
   text-align:center;
-  padding:0 20px;
+  padding:0 20vh;
 }
 
 .overlay {
   background: rgba(255,255,255,0.85);
-  padding:40px 30px;
-  border-radius:12px;
-  max-width:800px;
+  padding:40vh 30vh;
+  border-radius:12vh;
+  max-width:800vh;
   animation: fadeInUp 1.5s forwards;
   opacity:0;
 }
@@ -159,4 +159,6 @@ window.addEventListener('scroll', () => {
 
 </body>
 </html>
+
+
 
