--- a/index.html
+++ b/index.html
@@ -22,16 +22,16 @@ body { font-family:"Cormorant Garamond", serif; background:#fffaf9; color:#444; 
 
 .overlay {
   background: rgba(255,255,255,0.85);
-  padding:15vh 10vh;
+  padding:10% 5%;
   border-radius:12vh;
-  max-width:300vh;
+  max-width:159vh;
   animation: fadeInUp 1.5s forwards;
   opacity:0;
 }
 
 @keyframes fadeInUp { 0% {opacity:0; transform:translateY(50px);} 100% {opacity:1; transform:translateY(0);} }
 
-.overlay img { width:100%; max-width:150%; border-radius:12px; }
+.overlay img { width:100%; max-width:140%; border-radius:12vh; }
 
 
 /* SECTIUNI TEXT + POZA */
@@ -160,6 +160,7 @@ window.addEventListener('scroll', () => {
 
 </body>
 </html>
+
 
 
 
