--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@ body { font-family:"Cormorant Garamond", serif; background:#fffaf9; color:#444; 
   opacity:0;
 }
 
-@keyframes fadeInUp { 0% {opacity:0; transform:translateY(50px);} 100% {opacity:1; transform:translateY(0);} }
+@keyframes fadeInUp { 0% {opacity:0; transform:translateY(50%);} 100% {opacity:1; transform:translateY(0);} }
 
 .overlay img { width:100%; max-width:140%; border-radius:12vh; }
 
@@ -160,6 +160,7 @@ window.addEventListener('scroll', () => {
 
 </body>
 </html>
+
 
 
 
