--- a/index.html
+++ b/index.html
@@ -116,6 +116,16 @@ footer { background:#f4e3e7; text-align:center; padding:25px; font-style:italic;
     <img src="p.jpg" alt="Poza reprezentativă">
   </div>
 </section>
+  <section class="event">
+        <div class="photo">
+            <img src="R.jpg" alt="Restaurantul">
+        </div>
+        <div class="text">
+            <h2>Petrecerea de nuntă</h2>
+            <p>Ne vom bucura împreună de o seară magică la <strong>Restaurant Drum Bun</strong>, începând cu ora <strong>17:00</strong>.</p>
+            <p>P.S.Tradițiile sunt frumoase, dar o băutură bună ține mai mult decât un buchet!</p>
+        </div>
+    </section>
 
 <!-- GALERIE -->
 <div class="gallery">
@@ -160,6 +170,7 @@ window.addEventListener('scroll', () => {
 
 </body>
 </html>
+
 
 
 
